# drippy

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CLAUDE.original.md  CONTRIBUTING.md  LICENSE  README.dev.md  README.md  project_setup.md  pyproject.toml  sonar-project.properties
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  link-check.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/examples/: 00_quickstart.ipynb  01_univariate.ipynb  02_timeseries.ipynb  03_onefactor.ipynb  04_multifactor.ipynb  05_regression.ipynb  06_comparative.ipynb
docs/superpowers/plans/: 2026-04-14-phase1-eda-foundation.md
docs/superpowers/specs/: 2026-04-14-nist-eda-plots-design.md
src/drippy/: __init__.py  comparative.py  data.py  multifactor.py  my_module.py  onefactor.py  regression.py  timeseries.py  univariate.py  utilities.py
tests/: test_comparative.py  test_data.py  test_multifactor.py  test_my_module.py  test_onefactor.py  test_regression.py  test_timeseries.py  test_univariate.py  test_utilities.py
