# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    { name = "Michiel Dubbelman", email = "m.p.dubbelman@tudelft.nl" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["matplotlib (>=3.10.7,<4.0.0)", "numpy (>=2.3.4,<3.0.0)", "scipy (>=1.16.3,<2.0.0)", "astropy (>=7.1.1,<8.0.0)", "lmfit (>=1.3.4,<2.0.0)"]
description = "Discover, Refine, Inspect, Present in Python, using EDA principles outlined by NIST/SEMATECH e-Handbook of Statistical Methods, http://www.itl.nist.gov/div898/handbook/eda/eda.htm to analyse data."
keywords = ["EDA"," data analysis"," data"," exploratory data analysis"," regression"," fitting"]
license-files = [
    "LICENSE","CITATION.cff"
]

name = "drippy"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11,<4"
version = "0.1.0"

[dependency-groups]
docs = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinx-autoapi (>=3.6.0,<4.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)"
]
dev = [
    {include-group = "docs"},
    "bump-my-version (>=1.2.2,<2.0.0)",
    "coverage (>=7.10.6,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "tox (>=4.30.2,<5.0.0)"
]

[project.urls]
Repository = "https://github.com/Pjieter/drippy"
Issues = "https://github.com/Pjieter/drippy/issues"
Changelog = "https://github.com/Pjieter/drippy/CHANGELOG.md"
ReadTheDocs = "https://drippy.readthedocs.io"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["src/drippy"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311,py312,py313
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
line-length = 79
output-format = "concise"
extend-exclude = ["docs"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "COM812", # Missing docstring in public class
    "TRY003", # Avoid specifying long messages outside the exception class
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
    "ANN001", # Missing type annotation for function arguments
]

[tool.ruff.lint.isort]
known-first-party = ["drippy"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/drippy/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
